--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
   assets:
     - assets/Initial/
     - assets/icons/
+    - assets/products/
     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
