--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
     - assets/Initial/
     - assets/icons/
     - assets/products/
+    - assets/additionals/
     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
